# athmanam

./: .gitignore  README.md  meson.build
meson/: post_install.py
src/: AthmanamApp.vala  meson.build
src/Widgets/: MainWindow.vala  PoemParserWebView.vala
src/html/: index.html
subprojects/DOMServer/: meson.build
subprojects/DOMServer/src/: DOMServer.vala
